package edu.kit.iti.formal.stvs.view.menu;

import edu.kit.iti.formal.stvs.model.code.Code;

/**
 * Created by csicar on 10.01.17.
 */
public class STFileChooserController {
    public STFileChooserController(Code code) {

    }
}
